# aegis-pitching-engine

./: .gitignore  LAUNCHER_GUIDE.md  QUICKSTART.md  README.md  launch_dashboard.sh  launch_dashboard_debug.sh  pyproject.toml  requirements-dashboard.txt  test_dashboard_connection.sh
config/simulation/: simulation_config.yaml
docs/: AegisStrategyEngine_guide.md  CHANGELOG_ContextEncoder.md  TROUBLESHOOTING.md  architecture.md  context_encoder_v4_finalized.md  convention.md  dashboard_user_guide.md  data_noise_robustness.md  file_changes.md  main_entry_point.md  pinn_implementation.md  roadmap.md  tunneling_analysis.md  tunneling_production.md  tunneling_quickref.md  tunneling_refactoring_summary.md  verification_report.md
examples/: pinn_model.pt  statcast_physics_demo.py  train_pinn.py
frontend/src/components/: CommanderBoard.tsx  CommanderDashboard.tsx
frontend/src/components/visualizer/: RiskCloud.tsx
frontend/src/store/: pitchStore.ts
scripts/: explore_savant_db.py
src/: main.py
src/api/: batch_simulation.py
src/api/routes/: recommendation.py
src/common/: config.py
src/dashboard/: README.md  __init__.py  app.py
src/data_pipeline/: __init__.py  data_loader.py
src/game_theory/: __init__.py  context_encoder.py  effective_velocity.py  effective_velocity.py.backup  engine.py  entropy.py  tunneling.py
src/physics_engine/: __init__.py  pinn.py  savant_physics.py
src/services/: recommendation.py
tests/: test_coordinate_system.py
