[tool.poetry]
name = "aegis"
version = "0.1.0"
description = "Physics-Informed Pitching Engine"
authors = ["Chief Engineer <user@yonsei.ac.kr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = "*"
numpy = "*"
pandas = "*"
scipy = "*"
duckdb = "*"
fastapi = "*"
uvicorn = "*"
langchain = "*"
chromadb = "*"
hydra-core = "*"
pydantic = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
